--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ layout: default
     </div>
 </section>
 
-<!-- AI <!-- Section Featured Projects harus tetap ada -->
+<!-- Section Featured Projects harus tetap ada -->
 <section class="py-16">
     <div class="max-w-6xl mx-auto px-4">
         <div class="text-center mb-12">
@@ -107,13 +107,14 @@ layout: default
         </div>
     </div>
 </section>
-<!-- 
-llscreen Modal -->
+
+<!-- fullscreen Modal -->
 <div id="ai-chat-modal" class="fixed inset-0 z-[100] hidden">
     <div class="absolute inset-0 bg-black/80 backdrop-blur-lg"></div>
     
     <div class="relative h-full flex items-center justify-center p-4">
-        <div class="ai-chat-container w-full max-w-4xl h-[80vh] bg-slate-900/95 backdrop-blur-xl rounded-3xl border border-slate-700/50 shadow-2xl overflow-hidden transform scale-95 opacity-0 transition-all duration-500">
+        <div class="ai-chat-container w-full max-w-4xl h-[80vh] bg-slate-900/95 backdrop-blur-xl rounded-3xl border border-slate-700/50 shadow-2xl overflow-hidden transform scale-95 opacity-0 transition-all duration-300
+  md:rounded-3xl md:h-[80vh] md:max-w-4xl rounded-none h-screen w-screen max-w-full">
             <!-- Chat Header -->
             <div class="p-6 border-b border-slate-700/50 bg-gradient-to-r from-slate-800 to-slate-900">
                 <div class="flex items-center justify-between">
