--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
                             <input 
                                 type="text" 
                                 id="ai-trigger-input"
-                                placeholder="Click here or type to start chatting with AI..."
+                                placeholder="Type to start chatting with AI..."
                                 class="w-full py-3 px-4 bg-slate-700/80 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-green-500 cursor-pointer ai-trigger-input"
                                 readonly
                             >
