--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@ layout: default
                             <i class="fas fa-robot text-white text-lg"></i>
                         </div>
                         <div>
-                            <h2 class="text-xl font-bold text-white">DaffaDev AI Assistant</h2>
-                            <p class="text-slate-400 text-sm">I can help you find the perfect repositories!</p>
+                            <h2 class="text-xl font-bold text-white">DaffaDev AI</h2>
+                            <p class="text-slate-400 text-sm">I can help you find the repositories!</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-3">
