--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ layout: default
     
     <div class="relative h-full flex items-center justify-center p-4">
         <div class="ai-chat-container w-full max-w-4xl h-[80vh] bg-slate-900/95 backdrop-blur-xl rounded-3xl border border-slate-700/50 shadow-2xl overflow-hidden transform scale-95 opacity-0 transition-all duration-300
-  md:rounded-3xl md:h-[80vh] md:max-w-4xl rounded-none h-screen w-screen max-w-full">
+  md:rounded-3xl md:h-[80vh] md:max-w-4xl rounded-none h-screen max-h-full w-screen max-w-full">
             <!-- Chat Header -->
             <div class="p-6 border-b border-slate-700/50 bg-gradient-to-r from-slate-800 to-slate-900">
                 <div class="flex items-center justify-between">
@@ -131,7 +131,7 @@ layout: default
                         <button class="ai-modal-minimize w-8 h-8 flex items-center justify-center text-slate-400 hover:text-white transition">
                             <i class="fas fa-window-minimize"></i>
                         </button>
-                        <button class="ai-modal-close w-8 h-8 flex items-center justify-center text-slate-400 hover:text-red-400 transition">
+                        <button class="hidden ai-modal-close w-8 h-8 flex items-center justify-center text-slate-400 hover:text-red-400 transition">
                             <i class="fas fa-times text-lg"></i>
                         </button>
                     </div>
