--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@ layout: default
                             type="text" 
                             id="ai-chat-input"
                             placeholder="Ask me about repositories, technologies, or features..."
-                            class="w-full py-4 px-6 bg-slate-700/50 border border-slate-600 rounded-2xl text-white placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-green-500 text-lg pr-24"
-                        >
+                            class="w-full py-4 px-6 bg-slate-700/50 border border-slate-600 rounded-2xl text-white placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-green-500 text-lg pr-24">
                         <div class="absolute right-3 top-1/2 transform -translate-y-1/2 flex space-x-2">
                             <button class="ai-send-message px-4 py-2 bg-gradient-to-r from-green-500 to-blue-500 rounded-xl text-white font-semibold hover:opacity-90 transition disabled:opacity-50 flex items-center">
                                 <i class="fas fa-paper-plane mr-2"></i>Send
