--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ layout: default
     </div>
 </section>
 
-<!-- AI <!-- Section Featured Projects harus tetap ada -->
+<!-- Section Featured Projects harus tetap ada -->
 <section class="py-16">
     <div class="max-w-6xl mx-auto px-4">
         <div class="text-center mb-12">
@@ -111,7 +111,7 @@ layout: default
 <div id="ai-chat-modal" class="fixed inset-0 z-[100] hidden">
     <div class="absolute inset-0 bg-black/80 backdrop-blur-lg"></div>
     
-    <div class="relative h-full flex items-center justify-center">
+    <div class="relative h-full flex items-center justify-center p-0">
         <div class="ai-chat-container w-full max-w-4xl h-[80vh] bg-slate-900/95 backdrop-blur-xl rounded-3xl border border-slate-700/50 shadow-2xl overflow-hidden transform scale-95 opacity-0 transition-all duration-500">
             <!-- Chat Header -->
             <div class="p-6 border-b border-slate-700/50 bg-gradient-to-r from-slate-800 to-slate-900">
