--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
                             <input 
                                 type="text" 
                                 id="ai-trigger-input"
-                                placeholder="Click here or tap here to start chatting with AI..."
+                                placeholder="Tap here to start chatting with AI..."
                                 class="w-full py-3 px-4 bg-slate-700/80 border border-slate-600 rounded-lg text-white placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-green-500 cursor-pointer ai-trigger-input"
                                 readonly>
                             <button class="hidden absolute right-3 top-3 text-white bg-gradient-to-r from-green-500 to-blue-500 px-3 py-1 rounded text-sm font-semibold hover:opacity-90 transition">
