--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@ layout: default
                             <i class="fas fa-robot text-white text-lg"></i>
                         </div>
                         <div>
-                            <h2 class="text-xl font-bold text-white">DaffaDev AI Assistant</h2>
-                            <p class="text-slate-400 text-sm">I can help you find the perfect repositories!</p>
+                            <h2 class="text-xl font-bold text-white">DaffaDev AI</h2>
+                            <p class="text-slate-400 text-sm">help you to find the repo</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-3">
                         <button class="ai-modal-minimize w-8 h-8 flex items-center justify-center text-slate-400 hover:text-white transition">
                             <i class="fas fa-window-minimize"></i>
                         </button>
-                        <button class="ai-modal-close w-8 h-8 flex items-center justify-center text-slate-400 hover:text-red-400 transition">
+                        <button class="hidden ai-modal-close w-8 h-8 flex items-center justify-center text-slate-400 hover:text-red-400 transition">
                             <i class="fas fa-times text-lg"></i>
                         </button>
                     </div>
