--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ layout: default
                     </div>
                 </div>
             </div>
-
+<div class="footer-modal">
             <!-- Quick Actions -->
             <div id="ai-quick-actions" class="px-6 py-4 border-t border-slate-700/50 bg-slate-800/30">
                 <div class="flex flex-wrap gap-2 justify-center">
@@ -200,6 +200,7 @@ layout: default
                     </div>
                 </div>
             </div>
+</div>
 
             <!-- Loading Indicator -->
             <div id="ai-chat-loading" class="hidden absolute inset-0 bg-slate-900/80 backdrop-blur-sm flex items-center justify-center">
