--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ layout: default
                     </div>
                 </div>
             </div>
-<div class="footer-modal">
+<div class="footer-modal absolute bottom-0 left-0 w-full">
             <!-- Quick Actions -->
             <div id="ai-quick-actions" class="px-6 py-4 border-t border-slate-700/50 bg-slate-800/30">
                 <div class="flex flex-wrap gap-2 justify-center">
