--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ layout: default
                         <input 
                             type="text" 
                             id="ai-chat-input"
-                            placeholder="Ask me about repositories, technologies, or features..."
+                            placeholder="Ask me about repositories."
                             class="w-full py-4 px-6 bg-slate-700/50 border border-slate-600 rounded-2xl text-white placeholder-slate-400 focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-green-500 text-lg pr-24"
                         >
                         <div class="absolute right-3 top-1/2 transform -translate-y-1/2 flex space-x-2">
