--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@ layout: default
             <div class="inline-flex items-center bg-slate-800/50 rounded-2xl px-6 py-4 border border-slate-700">
                 <i class="fas fa-robot text-green-400 text-xl mr-3"></i>
                 <p class="text-slate-300">
-                    <span class="text-white font-semibold">Need help finding something specific?</span>
-                    <button class="ai-trigger-button ml-2 text-green-400 hover:text-green-300 font-semibold underline transition">
-                        Ask AI Assistant
-                    </button>
+                    <span class="text-white font-semibold">Need help for coding?</span>
+                    <a href="https://daffadevhosting.github.io/chat/" class="ai-trigger-button ml-2 text-green-400 hover:text-green-300 font-semibold underline transition">
+                        Ask AI
+                    </a>
                 </p>
             </div>
         </div>
